@@ -116,6 +116,7 @@ if(${PROJECT_NAME}_CONFIGURED_SUCCESSFULLY)
         src/ndhist/ndtable.cpp
         src/ndhist/storage.cpp
         src/ndhist/stats/expectation.cpp
+        src/ndhist/stats/kurtosis.cpp
         src/ndhist/stats/mean.cpp
         src/ndhist/stats/median.cpp
         src/ndhist/stats/skewness.cpp
@@ -178,6 +179,7 @@ if(${PROJECT_NAME}_CONFIGURED_SUCCESSFULLY)
         src/pybindings/axes/constant_bin_width_axis.cpp
         src/pybindings/axes/generic_axis.cpp
         src/pybindings/stats/expectation.cpp
+        src/pybindings/stats/kurtosis.cpp
         src/pybindings/stats/mean.cpp
         src/pybindings/stats/median.cpp
         src/pybindings/stats/skewness.cpp
