@@ -1,3 +1,6 @@
+- Implemented the kurtosis statistics function, that calculates the kurtosis
+  of a particular ndhist axis.
+
 - Implemented the skewness statistics function, that calculates the skewness
   of a particular ndhist axis.
 
